--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-# core
-numpy
-matplotlib
-pillow
-h5py==2.10.0
-scikit-image
-funcsigs
-opencv-python
-moviepy
-torch==1.9.0
-torchvision==0.10.0
-tensorboard==2.1.1
-tensorboardX==2.0
-gym==0.15.4
-pandas
-
-# RL
-wandb
-mpi4py
-mujoco_py==2.0.2.9
+funcsigs==1.0.2
+glfw==2.5.5
+gym==0.23.0
+h5py==3.7.0
+hid==1.0.5
+imageio==2.22.1
+matplotlib==3.6.1
+mujoco_py==2.1.2.14
+numpy==1.23.3
+opencv_python==4.6.0.66
+Pillow==9.3.0
+pybullet==3.2.5
+pygame==2.1.2
+scikit_image==0.19.3
+tensorboardX==2.5.1
+torch==1.12.1
+torchvision==0.13.1
+tqdm==4.64.1
+wandb==0.13.5
+patchelf
